# rust_template

./: Cargo.toml  README.md  cargo-generate.toml
.cargo/: config.toml
src/: lib.rs
