[package]
name = "{{crate_name}}"
{% if authors %}authors = ["{{authors}}"]{% endif %}
{% if description %}description = "{{description}}"{% endif %}
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
strip = true
panic = 'abort'
codegen-units = 1
lto = true
